# StomataPy

./: .gitignore  .gitmodules  LICENSE  README.md  concat_result.py  demo.py  env.txt  install.py  install_uv.py  pyproject.toml  training_tutorial.ipynb
Applications/: README.md
asserts/sample images/: A. aurea Vofely2019 CellImages 7-23-400x-1-01.json  A. sisalana Vofely2019 CellImages gp15-095_001_4x.json  A. sisalana Vofely2019 CellImages gp15-095_001_4x.tif  G. odoratum Vofely2019 CellImages 6-21-400x-2-01.json  M. apetala Fetter2019 cropped_MLC_FLMNH00420_Sapindaceae_Matayba_apetala_f2_oppositifolia_grouped_gray_400dpi-1.json  Q. corrugata Fetter2019 cropped_MLC_FLMNH00642_Fagaceae_Quercus_corrugata_grp-1.json  R. scutatus Vofely2019 CellImages 4-06-400x-1-03.json
asserts/sample images p=0.1 corrected/: G. odoratum Vofely2019 CellImages 6-21-400x-2-01.json  R. scutatus Vofely2019 CellImages 4-06-400x-1-03.json
asserts/sample images p=0.5/: A. sisalana Vofely2019 CellImages gp15-095_001_4x.json
asserts/sample images p=0.7 corrected/: Q. corrugata Fetter2019 cropped_MLC_FLMNH00642_Fagaceae_Quercus_corrugata_grp-1.json
asserts/sample_images/: A. strigosa Vofely2019 CellImages gp15-108_002_20x_ab.tif
docker/: Dockerfile
notebooks/: 1. ISAT json tools.ipynb  2. Prepare training dataset.ipynb  3. Training.ipynb  4. Stomata inference.ipynb  Datasets Statistics.ipynb  GCstarch3D.ipynb  HQ-SAM dev.ipynb  Starch inference.ipynb  label.ipynb
notebooks/Legacy/: README.qmd
notebooks/installation/: installation.txt
stomatapy/core/: core.py  isat.py
(+33 files in other folders)
